# 4felgo

./: CMakeLists.txt  ReadMe.md
profiles/: ios-simulator
qml/: Main.qml  config.json
resources/android/: AndroidManifest.xml  build.gradle
src/App/: App.cmake  main.cpp
src/App/Controllers/GuiController/: GuiController.cpp  GuiController.h
src/App/Models/: BaseModel.cpp
src/App/SentryIntegration/platform/stub/: SentryIntegration_Stub.cpp
